# GL3-TDGE

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
ExampleGame/: CMakeLists.txt
ExampleGame/src/: EnemyProjectileCollision.h  GameOverScreen.h  MyGame.h  Player.h  Score.h  Shop.h  main.cpp
assets/: wave_definition_test.json
assets/shaders/: fragmentShader.frag  vertexShader.vert
code/: CMakeLists.txt
code/ExampleGame/levels/: level_1.json
code/ExampleGame/src/: Base.h  GameManager.h
code/engine/include/engine/core/: Cell.h  InputManager.h
code/engine/include/engine/core/factories/: BulletFactory.h  EnemyFactory.h  TurretFactory.h
code/engine/include/engine/ecs/: Components.h  Scene.h
code/engine/include/engine/ecs/components/: AudioClip.h  DestroyRequest.h  Health.h  Movement.h  SpawnRequest.h  Sprite.h  WaveState.h
code/engine/include/engine/ecs/systems/: AudioSystem.h  DestructionSystem.h  MovementSystem.h  ShootingSystem.h  WaveSystem.h
code/engine/include/engine/rendering/: Assets.h  Shader.h
code/engine/include/engine/waves/: WaveParser.h
code/engine/src/: Context.cpp  Game.cpp
code/engine/src/ecs/systems/: AudioSystem.cpp  MovementSystem.cpp  TargetingSystem.cpp  WaveSystem.cpp
code/engine/src/rendering/: Texture.cpp
docs/: Doxyfile
documentation/docs/: QuickStart.md
documentation/docs/wiki/: eninge.md  game.md
engine/: CMakeLists.txt
engine/include/engine/: Game.h
engine/include/engine/core/: Cell.h  EnemyFactory.h  GameState.cpp  GameState.h  Grid.h  Path.cpp  Path.h  PathData.h
engine/include/engine/ecs/: Components.h
engine/include/engine/ecs/components/: Collider.h  GridPosition.h  Health.h  Movement.h  Path.h  PathFollow.h  Projectile.h  Shooting.h  SpawnRequest.h  Tags.h  Targeting.h  Transform.h
engine/include/engine/ecs/systems/: CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.h  ShootingSystem.h  SpawnSystem.h  TargetingSystem.h  WaveSystem.h
engine/include/engine/rendering/: Renderer.h  Renderer2D.h  Shader.h  Texture.h  UserInterface.h
engine/include/engine/waves/: WaveDefinition.h  WaveInfo.h  wave_definition_template.json
engine/src/: Context.cpp  Game.cpp
engine/src/core/: Cell.cpp  EnemyFactory.cpp  GameState.cpp  Grid.cpp  InputManager.cpp  Path.cpp
engine/src/core/factories/: BulletFactory.cpp  EnemyFactory.cpp  TurretFactory.cpp
engine/src/ecs/systems/: RenderSystem.cpp  ShootingSystem.cpp  SpawnSystem.cpp  TargetingSystem.cpp  WaveSystem.cpp
engine/src/rendering/: Renderer.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp
engine/src/waves/: WaveDefinition.cpp  WaveParser.cpp
